# imxInsights

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _test_build.py  mkdocs.yml  pyproject.toml  settings.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yml  documentation.yml  pre-release.yml  release.yml
docs/: vision.md
docs/context/: installation.md  open-imx.md  vision.md  way_of_working.md
docs/examples/: basic_use.md  compare.md
docs/examples/basic_use/: compair_main.py  containerImx_compare.py  containerImx_geojson.py  containerImx_main.py  container_imx_multi_repo.py  different_imx_version_compare.py  singleImx_compare.py  singleImx_geojson.py  singleImx_main.py  singleImx_multi_repo.py
docs/examples/compare/: containerImx_compare.py  different_imx_version_compare.py  singleImx_compare.py
docs/reference/: containerized_imx.md  imx_file.md  imx_object.md  single_file_imx.md
docs/reference/compair/: imx_compair_multirepo.md  imx_compair_operator.md
docs/reference/compare/: imx_compare_multirepo.md  imx_compare_operator.md
docs/reference/exceptions/: exceptions.md  exceptions_handler.md  exceptions_imx.md
docs/reference/repo/: config.md  imx_multi_repo.md  imx_repo.md  repo_builders.md  repo_exceptions.md
docs/reference/utils/: header_annotator.md  header_loader.md  shapley_geojson.md  shapley_gml.md  shapley_transform.md
docs/stylesheets/: extra.css
imxInsights/: __init__.py
imxInsights/compair/: changes.py  compairMultiRepo.py  excelReportGenerator.py  helpers.py
imxInsights/compair/custom_operators/: refs_diff_operator.py  shapely_diff_operator.py
imxInsights/compare/: changeStatusEnum.py  changedImxChainObjects.py  changedImxObject.py  changedImxObjects.py  changedImxObjectsChain.py  changes.py  compareMultiRepo.py  compareMultiRepoProtocol.py  compareMultiRepoV2.py  excelReportGenerator.py  geometryChange.py  headerLoader.py  helpers.py  imxContainerCompare.py  imxContainerCompareChain.py
imxInsights/compare/custom_operators/: diff_refs.py  diff_shapely.py  refs_diff_operator.py  shapely_diff_operator.py
imxInsights/domain/: areas.py  imxEnums.py  imxGeographicLocation.py  imxObject.py  imxReferenceObjects.py  imxSituationChanges.py  onRailConnectionGeometry.py
imxInsights/domain/railConnection/: railConnection.py  railConnectionInfo.py
imxInsights/exceptions/: __init__.py  customException.py  exceptionHandler.py  exceptionLevels.py  imxExceptions.py
imxInsights/file/: imxFile.py  xmlFile.py
imxInsights/file/containerizedImx/: containerImxPandasGenerator.py  imxContainer.py  imxContainerFile.py  imxContainerFileReference.py  imxContainerFiles.py  imxContainerMetadata.py  imxContainerProtocol.py  imxDesignCoreFile.py  imxDesignPetalFile.py
imxInsights/file/singleFileImx/: imxSingleFile.py  imxSingleFileMetadata.py  imxSituation.py  imxSituationEnum.py  imxSituationProtocol.py  singleImxPandasGenerator.py
imxInsights/repo/: __init__.py  config.py  imxComparedRepo.py  imxMultiRepo.py  imxMultiRepoObject.py  imxMultiRepoProtocol.py  imxObjectTree.py  imxRepo.py  imxRepoProtocol.py
imxInsights/repo/builders/: addRefs.py  buildExceptions.py  buildOnRailConnectionGeometry.py  buildRailConnections.py  buildSpecificGeometry.py  extendObjects.py
imxInsights/repo/tree/: imxMultiObjectTree.py  imxObjectTree.py
imxInsights/repo/tree/builders/: addChildren.py  addRefs.py  buildRailConnections.py  extendObjects.py
imxInsights/report/: containerImxDataframeBuilder.py  containerImxPandasGenerator.py  diffExcel.py  excelGenerator.py  singleImxDataFrameBuilder.py  singleImxPandasGenerator.py
imxInsights/utils/: areaClassifier.py  excel_helpers.py  file.py  file_helpers.py  flatten_unflatten.py  hash.py  headerAnnotator.py  headerLoader.py  pandas_helpers.py  profiler.py  report_helpers.py  shapely_geojson.py  shapely_gml.py  shapely_transform.py  shapley_helpers.py  singleton.py  version_check.py  xmlFile.py  xml_helpers.py
imxInsights/utils/imx/: calculate_measurements.py  calculate_measures.py  createFlankProtectionTable.py  excel_comments.py  manifestBuilder.py
imxInsights/utils/measure_3d/: measureCalculator.py  measureEnums.py  measureResult.py
imxInsights/utils/shapely/: shapely_geojson.py  shapely_gml.py  shapely_transform.py  shapley_helpers.py
old_code/: containerImxPandasGenerator.py  diffExcel.py  excel_helpers.py  imxComparedRepo.py  pandas_helpers.py
old_code/compare/: changedImxObject.py  geometryChange.py
old_code/compare/custom_operators/: shapely_diff_operator.py
old_code/railConnection/: railConnectionInfo.py
sample_data/: measure_test_set.geojson  spec-mini-01.2.4.csv  spec-mini-12.0.0.csv
sample_data/1200/set_1/: IMSpoor-Furniture.xml  IMSpoor-InstallationDesign.xml  IMSpoor-Manifest.xml  IMSpoor-NetworkConfiguration.xml  IMSpoor-Observations.xml  IMSpoor-SchemaLayout.xml  IMSpoor-SignalingDesign.xml  IMSpoor-TrainControl.xml
sample_data/500/: basic_500.xml
tests/: conftest.py  helpers.py  test_area_classifier.py  test_compair.py  test_compare.py  test_compare_deepdiff.py  test_compare_geometry.py  test_compare_imx.py  test_compare_shapley.py  test_diff.py  test_diff_excel.py  test_excel.py  test_file_helpers.py  test_flatten_and_hash.py  test_geojson.py  test_geometry_compare.py  test_header.py  test_header_annotator.py  test_imx_files.py  test_imx_repos.py  test_logger.py  test_manifest_builder.py  test_measure_calculator.py  test_multi_repo.py  test_profiler.py  test_reorder_index_key_dict.py  test_repo.py  test_report_helpers.py  test_shapely_geometry_movement.py  test_shapely_gml.py  test_shapley_geojson.py  test_singleton.py  test_specs_header.py  test_transform_coordinates.py
tests/fixtures/: files.py  imx_files.py  multi_repo.py
