[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]
ignore = ["TRY003"]

[tool.pytest.ini_options]
addopts = "--cov=imxInsights --cov-report=term-missing --ignore=test_build.py"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope="function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
filterwarnings = [
    "ignore:.*For single IMX files, we recommend using imxInsights version 0.1.0.dev1.*:UserWarning"
]

[tool.isort]
profile = "black"  # Adjust this to match your style preference

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_message = "🚀 Version {new_version}"
path = "imxInsights/__init__.py"
tag_sign = false

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "mypy",
    "ruff==0.7.3",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mkdocs-material",
    "mkdocstrings[python]==0.25.2",
    "pre-commit",
    "filelock",
    "distlib",
    "zizmor",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.default.scripts]
test = "pytest --runslow"
test-no-slow = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "isort imxInsights/",
  "ruff format imxInsights/",
  "ruff format --check imxInsights/",
  "mypy imxInsights/ --check-untyped-defs",

]
lint-check = [
  "ruff -V",
  "ruff format --diff imxInsights/",
  "ruff format --check imxInsights/",
  "ruff check imxInsights/",
  "mypy imxInsights/ --check-untyped-defs",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit", "isort"]
build-backend = "hatchling.build"

[project]
name = "imxInsights"
authors = [
    { name = "Hzd", email = "Hazedd@users.noreply.github.com" },
    { name = "Open-Imx", email = "open-imx@organisation.noreply.github.com" },
]
description = "python imx insights module to get information from imx files"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "tqdm",
    "tqdm-stubs",
    "lxml",
    "types-lxml",
    "shapely",
    "types-shapely",
    "pyproj",
    "pandas",
    "pandas-stubs",
    "xlsxwriter",
    "openpyxl",
    "types-openpyxl",
    "networkx",
    "types-networkx",
    "dateparser",
    "types-dateparser",
    "deepdiff",
    "jinja2", # for pandas styler 😊
    "geojson",
    "packaging",
    "content-types",
]

[project.urls]

Documentation = "https://open-imx.github.io/imxInsights/"
Source = "https://github.com/open-imx/imxInsights"

[[tool.mypy.overrides]]
module = [
    "geojson",
]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/utils/version_check.py",
    "*/*Protocol.py",
    "*/utils/imx/manifestBuilder.py",
    "*/utils/imx/create_flank_protection_table.py",
    "*/utils/imx/calculate_measures.py",
    "*/utils/imx/excel_comments.py"
]
[tool.coverage.report]
exclude_also = [
    "raise ValueError",
    "def __repr__",
]